@@ -24,6 +24,7 @@ m4_define([cairo_required_version], [1.10])
 m4_define([fontconfig_required_version], [2.4])
 m4_define([freetype2_required_version], [9.0])
 m4_define([glib_required_version], [2.32.0])
+m4_define([harfbuzz_required_version], [0.9.7])
 m4_define([libsoup_required_version], [2.40.0])
 m4_define([libxml_required_version], [2.6])
 m4_define([pango_required_version], [1.21.0])
